# senior-design-14

./: .gitignore  README.md
RX_code/RX_script/: ErrorCheck.py  ReceiveInterface.py  Received.txt  Received_stripped.txt  Shrek.txt  errTest.txt  errTestCheck.txt  errorchecking.py
RX_code/RX_sketch/: LiFiCorrection.cpp  RX_sketch.ino  Receiver.cpp
RX_code/RX_sketch_rf/: Bitset.cpp  Bitset.hpp  LiFiRXConsts.hpp  LiFiRXInterrupts.cpp  LiFiRXInterrupts.hpp  LiFiRXLink.cpp  LiFiRXLink.hpp  LiFiRXSampling.cpp  LiFiRXSampling.hpp  Pinset.hpp  RX_sketch_rf.ino
Receiver/: Receiver.cpp  Receiver.h  Receiver.ino
Receiver/Receiver Serial/: Receiver.cpp  Receiver.h  loopinput.ino  receiver1.ino
Senior Design receiver/: Maincirc.SchDoc
TX_PCB/: Sheet1.SchDoc
TX_PCB/Project Outputs for TransmitterPCB/: PCB1.GBL  PCB1.GPB  PCB1.GTS  PCB1.LDP  PCB1.RUL
TX_code/TX_interface/: Bee.txt  TransmitInterface.py  striplines.py
TX_enclosure/: Lens.stl  Lenses.stl  Tube.stl
Testing/: ErrorCheck.py  r1.txt
Transmit/: Transmit.cpp  Transmit.h  Transmit.ino
Transmit/Transmitter Serial Interface/: interface.txt  (+2 more)
TransmitterEnclosure/: Cap.stl  LEDtoFresnel.stl
TransmitterPCB/: PCB1.PcbDoc  TransmitterPCB.OutJob  TransmitterPCB.PrjPcb
compression_correction/: Bitset.cpp  Bitset.hpp  CMakeLists.txt  HuffmanTree.cpp  HuffmanTree.hpp  LiFiCodeAnalysis.hpp  LiFiCompression.hpp  LiFiCorrection.cpp  LiFiSimulation.cpp  LiFiSimulation.hpp  a.exe.stackdump  fileTests.cpp  fullTest.cpp  treeTests.cpp
compression_correction/data/: alice.txt  cities.txt  crime.txt  dorian.txt  dracula.txt  frank.txt  gatsby.txt  john.txt  moby.txt  pride.txt  prince.txt  proposal.txt  sherlock.txt  ulysses.txt  yellow.txt
compression_correction/include/: Bitset.hpp  HuffmanTree.hpp  LiFiCompression.hpp  LiFiConstants.hpp
compression_correction/main/inc/: Bitset.hpp  LiFiCompression.hpp  LiFiCompressionOld.hpp  LiFiCorrection.hpp  SourceReader.hpp
compression_correction/main/src/: Bitset.cpp  LiFiCompression.cpp
compression_correction/research/inc/: HuffmanTree.hpp  LiFiFileIO.hpp  fieldElement.hpp
compression_correction/research/src/: LiFiCodeAnalysis.cpp  LiFiFileIO.cpp  fieldElement.cpp
compression_correction/source/: Bitset.cpp  BopItConsts.hpp  HuffmanTree.cpp  LiFiCompression.cpp
compression_correction/test/src/: LiFiSimulation.cpp  bitsetTests.cpp  fieldTests.cpp  fileTests.cpp  fullTest.cpp  syncTests.cpp  treeTests.cpp
compression_correction/tests/: LiFiSimulation.cpp  fullTest.cpp  treeTests.cpp
compression_correction/verifySketch/: verifySketch.ino
(+55 files in other folders)
